--- a/Views/ToDo/Index.cshtml
+++ b/Views/ToDo/Index.cshtml
@@ -1,13 +1,16 @@
 ﻿@model List<ToDo>
 
+<script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 
-<table>
+<table class="sortable" id="customers">
     <tr>
         <th>Id</th>
         <th>Inhalt</th>
         <th>ErstellDatum</th>
         <th>Enddatum</th>
         <th>Status</th>
+        <th></th>
+        <th></th>
     </tr>
     @foreach(ToDo todo in Model)
     {
@@ -30,10 +33,69 @@
     }
 </table>
 
-<form action="/ToDo/Add">
-    <label for="Inhalt">Inhalt</label><br>
-    <input type="text" id="Inhalt" name="Inhalt"><br>
-    <label for="Enddatum">Enddatum</label><br>
-    <input type="datetime-local" id="Enddatum" name="Enddatum"><br><br>
-    <input type="submit" value="Submit">
-</form> 
+<div class="add_form">
+    <form action="/ToDo/Add">
+        <div class="form_item">
+            <label for="Inhalt">Inhalt</label><br>
+            <input type="text" id="Inhalt" name="Inhalt"><br>
+        </div>
+        
+        <div class="form_item">
+            <label for="Enddatum">Enddatum</label><br>
+            <input type="datetime-local" id="Enddatum" name="Enddatum"><br><br>
+        </div>
+
+        <div class="form_item">
+            <label for="Enddatum">Action</label><br>
+            <input type="submit" value="Submit">
+        </div>
+    </form>
+</div>
+
+<style>
+    #customers {
+        font-family: Arial, Helvetica, sans-serif;
+        border-collapse: collapse;
+        width: 100%;
+    }
+
+    #customers td, #customers th {
+        border: 1px solid #ddd;
+        padding: 8px;
+    }
+
+    #customers tr:nth-child(even) {
+        background-color: #f2f2f2;
+    }
+
+    #customers tr:hover {
+        background-color: #ddd;
+    }
+
+    #customers th {
+        padding-top: 12px;
+        padding-bottom: 12px;
+        text-align: left;
+        background-color: blue;
+        color: white;
+    }
+
+    .sortable {
+        margin: 50px 0;
+    }
+
+    form {
+        display: inline-flex;
+        width: 100%;
+    }
+
+    input {
+        width: 100%;
+        padding: 0px 25px;
+    }
+
+    .form_item {
+        width: 33%;
+        padding: 0px 25px;
+    }
+</script>
